# MuonWrapper

./: README.md  setup.cfg
src/torch_muon_hybrid/: MuonCPU.py  __init__.py  hybrid.py
src/torch_muon_hybrid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_smoke.py
