[metadata]
name            = torch-muon-hybrid
version         = attr: torch_muon_hybrid._version.__version__
author          = Your Name
author_email    = you@example.com
url             = https://github.com/yourname/torch-muon-hybrid
description     = "Composite optimiser: Muon (≥2-D) + any small-tensor optimiser"
long_description = file: README.md
long_description_content_type = text/markdown
license         = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9
install_requires =
    torch>=2.0

[options.packages.find]
where = src
